<resources>
    <string name="app_name">Calculator</string>
    <string name="formula">Let\'s Calculate</string>
    <string name="res">0</string>
    <string name="clear">A/C</string>
    <string name="mod">%</string>
    <string name="abs">±</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
</resources>