<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvFormula"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="90dp"
        android:gravity="end"
        android:textColor="@color/purple_500"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/formula" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="60dp"
        android:gravity="end"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="@id/tvFormula"
        android:text="@string/res" />

    <GridLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="40dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/clear"
            android:textSize="20sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/abs"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/abs"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mod"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/mod"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple_700"
            android:text="@string/div"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/seven"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/eight"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/nine"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mul"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple_700"
            android:text="@string/mul"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/four"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/five"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/six"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sub"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple_700"
            android:text="@string/sub"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/one"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/two"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/three"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple_700"
            android:text="@string/add"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/zero"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/point"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/point"
            android:textSize="30sp"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/purple_700"
            android:text="@string/equal"
            android:textSize="30sp"
            app:cornerRadius="15dp" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
